--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "animejs": "^3.2.2",
     "fabric": "^5.3.0",
     "mobx": "^6.13.5",
     "mobx-react-lite": "^4.0.7",
@@ -19,6 +20,7 @@
     "react-use": "^17.5.1"
   },
   "devDependencies": {
+    "@types/animejs": "^3.1.12",
     "@types/fabric": "^5.3.9",
     "@types/node": "^20",
     "@types/react": "^18",
